# meeting-intelligence

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: TECHNICAL_REPORT.md  architecture.mmd
src/meeting_intelligence/: __init__.py  alignment.py  asr.py  config.py  diarization.py  fusion.py  ingestion.py  io_utils.py  llm.py  main.py  merge.py  models.py  ocr.py  pipeline.py  scene_detection.py  segmentation.py  speaker_naming.py  speech.py  transcript.py  vision.py  visual_speaker.py  zoom_layout.py
tests/: conftest.py  test_asr.py  test_config.py  test_diarization.py  test_fusion.py  test_ingestion.py  test_io_utils.py  test_llm.py  test_main.py  test_merge.py  test_models.py  test_ocr.py  test_pipeline.py  test_scene_detection.py  test_segmentation.py  test_speaker_naming.py  test_speech.py  test_transcript.py  test_vision.py  test_visual_speaker.py  test_zoom_layout.py
work_dir/execrsice-video/: asr_segments.json  fused_timeline.json  ingestion.json  meeting_intelligence.json  scenes.json  speaker_name_map.json  speaker_turns.json  transcript.json  vad_segments.json  vision_track.json  visual_speaker_events.json
work_dir/execrsice-video_clip_00-08/: asr_segments.json  fused_timeline.json  ingestion.json  meeting_intelligence.json  scenes.json  speaker_name_map.json  transcript.json  vision_track.json  visual_speaker_events.json
work_dir_USE_INITIAL_PROMPT/execrsice-video/: asr_segments.json  fused_timeline.json  ingestion.json  meeting_intelligence.json  transcript.json  vision_track.json  visual_speaker_events.json
(+10 files in other folders)
